    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====
    ==> 132 - 10/11/2006 <==

+ <mave> Factory now creates also Propertized objects

    ==> 131 - 8/11/2006 <==

C <mave> messages.h headers can only be included by types.h
C <mave> all headers include directly "types.h" (a preparation of DLL for windows)
+ <mave> added 'shared' option to NNFW_CONFIG for building shared library
- <mave> dropped 'debug' from NNFW_CONFIG, use CMAKE_BUILD_TYPE instead
C <mave> Improved CMakeLists.txt

    ==> 124 - 1/11/2006 <==

C <mave> prettified the output of output stream operators
B <mave> resolved bug in Updatable class (moved implementation into a .cpp file)
C <mave> updated todo list

    ==> 123 - 30/10/2006 <==

C <mave> <outfunction> tag now is handled by xml I/O

    ==> 122 - 30/10/2006 <==

C <mave> updated the todo list

    ==> 120 - 30/10/2006 <==

+ <mave> typedef checking to print out an error message when users tries to includes directly
        primtypes.h, observ.h, vectordata.h, matrixdata.h, realvec.h and realmat.h

    ==> 119 - 27/10/2006 <==

C <mave> updated the ToDo List
C <mave> also <outputfunction> tag is correctly parsed
+ <mave> Factory now manage (create/register) OutputFunction classes
- <mave> deprecated all input stream operator
+ <mave> now OutputFunction, Cluster and Linker are properly managed by '<<' operators
+ <mave> added method for creating subclasses of OutputFunction from a PropertySettings map
C <mave> moved implementation of subclasses of OutputFunction from .h to .cpp file
+ <mave> added method setProperties to Propertized class

    ==> 117 - 27/10/2006 <==
